[tool.poetry]
name = "crypto-market-wrapper"
version = "0.3.0"
description = ""
authors = ["hasindusithmin <hasindusithmin64@gmail.com>"]
readme = "README.md"
repository="https://github.com/hasindusithmin/crypto-market-wrapper.git"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
pandas = "^1.5.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
